build/meson-logs/meson-log.txt
Build started at 2025-10-11T18:27:16.769751
Main binary: /usr/bin/python
Build Options: 
Python system: Linux
The Meson build system
Version: 1.9.1
Source dir: /home/islam/VisualStudioCodeProjects/spatio
Build dir: /home/islam/VisualStudioCodeProjects/spatio/build
Build type: native build
Project name: spatio
Project version: 0.1.0
C compiler for the host machine: cc (gcc 15.2.1 "cc (GCC) 15.2.1 20250813")
C linker for the host machine: cc ld.bfd 2.45.0
-----------
Detecting archiver via: `gcc-ar --version` -> 0
stdout:
GNU ar (GNU Binutils) 2.45.0
Copyright (C) 2025 Free Software Foundation, Inc.
This program is free software; you may redistribute it under the terms of
the GNU General Public License version 3 or (at your option) any later version.
This program has absolutely no warranty.
-----------
C++ compiler for the host machine: c++ (gcc 15.2.1 "c++ (GCC) 15.2.1 20250813")
C++ linker for the host machine: c++ ld.bfd 2.45.0
C compiler for the build machine: cc (gcc 15.2.1 "cc (GCC) 15.2.1 20250813")
C linker for the build machine: cc ld.bfd 2.45.0
-----------
Detecting archiver via: `gcc-ar --version` -> 0
stdout:
GNU ar (GNU Binutils) 2.45.0
Copyright (C) 2025 Free Software Foundation, Inc.
This program is free software; you may redistribute it under the terms of
the GNU General Public License version 3 or (at your option) any later version.
This program has absolutely no warranty.
-----------
C++ compiler for the build machine: c++ (gcc 15.2.1 "c++ (GCC) 15.2.1 20250813")
C++ linker for the build machine: c++ ld.bfd 2.45.0
Build machine cpu family: x86_64
Build machine cpu: x86_64
Host machine cpu family: x86_64
Host machine cpu: x86_64
Target machine cpu family: x86_64
Target machine cpu: x86_64
../meson.build:11: WARNING: Consider using the built-in option for language standard version instead of using "-std=c++20".
Dependency Louvre found: YES 2.18.1 (cached)
Build targets in project: 1

Found ninja-1.12.1 at /usr/bin/ninja
Running compile:
Working directory:  /home/islam/VisualStudioCodeProjects/spatio/build/meson-private/tmpk_jlawbu
Code:

        #ifdef __has_include
         #if !__has_include("version")
          #error "Header 'version' could not be found"
         #endif
        #else
         #include <version>
        #endif
-----------
Command line: `c++ /home/islam/VisualStudioCodeProjects/spatio/build/meson-private/tmpk_jlawbu/testfile.cpp -E -P -D_FILE_OFFSET_BITS=64 -P -O0 -fpermissive` -> 0
Running compile:
Working directory:  /home/islam/VisualStudioCodeProjects/spatio/build/meson-private/tmp43zplz4m
Code:

        #include <version>
        int main(void) {
            /* If it's not defined as a macro, try to use as a symbol */
            #ifndef _LIBCPP_VERSION
                _LIBCPP_VERSION;
            #endif
            return 0;
        }
-----------
Command line: `c++ /home/islam/VisualStudioCodeProjects/spatio/build/meson-private/tmp43zplz4m/testfile.cpp -o /home/islam/VisualStudioCodeProjects/spatio/build/meson-private/tmp43zplz4m/output.obj -c -D_FILE_OFFSET_BITS=64 -O0 -fpermissive` -> 1
stderr:
/home/islam/VisualStudioCodeProjects/spatio/build/meson-private/tmp43zplz4m/testfile.cpp: In function 'int main()':
/home/islam/VisualStudioCodeProjects/spatio/build/meson-private/tmp43zplz4m/testfile.cpp:6:17: error: '_LIBCPP_VERSION' was not declared in this scope
    6 |                 _LIBCPP_VERSION;
      |                 ^~~~~~~~~~~~~~~
-----------
Running compile:
Working directory:  /home/islam/VisualStudioCodeProjects/spatio/build/meson-private/tmp8a_x8yer
Code:

        #include <version>
        using _LIBCPP_VERSION;
        int main(void) { return 0; }
-----------
Command line: `c++ /home/islam/VisualStudioCodeProjects/spatio/build/meson-private/tmp8a_x8yer/testfile.cpp -o /home/islam/VisualStudioCodeProjects/spatio/build/meson-private/tmp8a_x8yer/output.obj -c -D_FILE_OFFSET_BITS=64 -O0 -fpermissive` -> 1
stderr:
/home/islam/VisualStudioCodeProjects/spatio/build/meson-private/tmp8a_x8yer/testfile.cpp:3:15: error: expected nested-name-specifier before '_LIBCPP_VERSION'
    3 |         using _LIBCPP_VERSION;
      |               ^~~~~~~~~~~~~~~
-----------
Running compile:
Working directory:  /tmp/tmpk4qrgiv9
Code:
int i = static_cast<int>(0);
-----------
Command line: `c++ /tmp/tmpk4qrgiv9/testfile.cpp -o /tmp/tmpk4qrgiv9/output.obj -D_FILE_OFFSET_BITS=64 -c -std=c++17` -> 0
Compiler accepts -std=c++17: YES
Using cached compile:
Cached command line:  c++ /home/islam/VisualStudioCodeProjects/spatio/build/meson-private/tmpk_jlawbu/testfile.cpp -E -P -D_FILE_OFFSET_BITS=64 -P -O0 -fpermissive 

Code:
 
        #ifdef __has_include
         #if !__has_include("version")
          #error "Header 'version' could not be found"
         #endif
        #else
         #include <version>
        #endif
Cached compiler stdout:
 
Cached compiler stderr:
 
Using cached compile:
Cached command line:  c++ /home/islam/VisualStudioCodeProjects/spatio/build/meson-private/tmp43zplz4m/testfile.cpp -o /home/islam/VisualStudioCodeProjects/spatio/build/meson-private/tmp43zplz4m/output.obj -c -D_FILE_OFFSET_BITS=64 -O0 -fpermissive 

Code:
 
        #include <version>
        int main(void) {
            /* If it's not defined as a macro, try to use as a symbol */
            #ifndef _LIBCPP_VERSION
                _LIBCPP_VERSION;
            #endif
            return 0;
        }
Cached compiler stdout:
 
Cached compiler stderr:
 /home/islam/VisualStudioCodeProjects/spatio/build/meson-private/tmp43zplz4m/testfile.cpp: In function 'int main()':
/home/islam/VisualStudioCodeProjects/spatio/build/meson-private/tmp43zplz4m/testfile.cpp:6:17: error: '_LIBCPP_VERSION' was not declared in this scope
    6 |                 _LIBCPP_VERSION;
      |                 ^~~~~~~~~~~~~~~

Using cached compile:
Cached command line:  c++ /home/islam/VisualStudioCodeProjects/spatio/build/meson-private/tmp8a_x8yer/testfile.cpp -o /home/islam/VisualStudioCodeProjects/spatio/build/meson-private/tmp8a_x8yer/output.obj -c -D_FILE_OFFSET_BITS=64 -O0 -fpermissive 

Code:
 
        #include <version>
        using _LIBCPP_VERSION;
        int main(void) { return 0; }
Cached compiler stdout:
 
Cached compiler stderr:
 /home/islam/VisualStudioCodeProjects/spatio/build/meson-private/tmp8a_x8yer/testfile.cpp:3:15: error: expected nested-name-specifier before '_LIBCPP_VERSION'
    3 |         using _LIBCPP_VERSION;
      |               ^~~~~~~~~~~~~~~

Using cached compile:
Cached command line:  c++ /home/islam/VisualStudioCodeProjects/spatio/build/meson-private/tmpk_jlawbu/testfile.cpp -E -P -D_FILE_OFFSET_BITS=64 -P -O0 -fpermissive 

Code:
 
        #ifdef __has_include
         #if !__has_include("version")
          #error "Header 'version' could not be found"
         #endif
        #else
         #include <version>
        #endif
Cached compiler stdout:
 
Cached compiler stderr:
 
Using cached compile:
Cached command line:  c++ /home/islam/VisualStudioCodeProjects/spatio/build/meson-private/tmp43zplz4m/testfile.cpp -o /home/islam/VisualStudioCodeProjects/spatio/build/meson-private/tmp43zplz4m/output.obj -c -D_FILE_OFFSET_BITS=64 -O0 -fpermissive 

Code:
 
        #include <version>
        int main(void) {
            /* If it's not defined as a macro, try to use as a symbol */
            #ifndef _LIBCPP_VERSION
                _LIBCPP_VERSION;
            #endif
            return 0;
        }
Cached compiler stdout:
 
Cached compiler stderr:
 /home/islam/VisualStudioCodeProjects/spatio/build/meson-private/tmp43zplz4m/testfile.cpp: In function 'int main()':
/home/islam/VisualStudioCodeProjects/spatio/build/meson-private/tmp43zplz4m/testfile.cpp:6:17: error: '_LIBCPP_VERSION' was not declared in this scope
    6 |                 _LIBCPP_VERSION;
      |                 ^~~~~~~~~~~~~~~

Using cached compile:
Cached command line:  c++ /home/islam/VisualStudioCodeProjects/spatio/build/meson-private/tmp8a_x8yer/testfile.cpp -o /home/islam/VisualStudioCodeProjects/spatio/build/meson-private/tmp8a_x8yer/output.obj -c -D_FILE_OFFSET_BITS=64 -O0 -fpermissive 

Code:
 
        #include <version>
        using _LIBCPP_VERSION;
        int main(void) { return 0; }
Cached compiler stdout:
 
Cached compiler stderr:
 /home/islam/VisualStudioCodeProjects/spatio/build/meson-private/tmp8a_x8yer/testfile.cpp:3:15: error: expected nested-name-specifier before '_LIBCPP_VERSION'
    3 |         using _LIBCPP_VERSION;
      |               ^~~~~~~~~~~~~~~

Running compile:
Working directory:  /home/islam/VisualStudioCodeProjects/spatio/build/meson-private/tmpiic1e37c
Code:

-----------
Command line: `c++ /home/islam/VisualStudioCodeProjects/spatio/build/meson-private/tmpiic1e37c/testfile.cpp -o /home/islam/VisualStudioCodeProjects/spatio/build/meson-private/tmpiic1e37c/output.obj -c -D_FILE_OFFSET_BITS=64 -O0 -fpermissive --print-search-dirs` -> 0
stdout:
install: /usr/lib/gcc/x86_64-pc-linux-gnu/15.2.1/
programs: =/usr/lib/gcc/x86_64-pc-linux-gnu/15.2.1/:/usr/lib/gcc/x86_64-pc-linux-gnu/15.2.1/:/usr/lib/gcc/x86_64-pc-linux-gnu/:/usr/lib/gcc/x86_64-pc-linux-gnu/15.2.1/:/usr/lib/gcc/x86_64-pc-linux-gnu/:/usr/lib/gcc/x86_64-pc-linux-gnu/15.2.1/../../../../x86_64-pc-linux-gnu/bin/x86_64-pc-linux-gnu/15.2.1/:/usr/lib/gcc/x86_64-pc-linux-gnu/15.2.1/../../../../x86_64-pc-linux-gnu/bin/
libraries: =/usr/lib/gcc/x86_64-pc-linux-gnu/15.2.1/:/usr/lib/gcc/x86_64-pc-linux-gnu/15.2.1/../../../../x86_64-pc-linux-gnu/lib/x86_64-pc-linux-gnu/15.2.1/:/usr/lib/gcc/x86_64-pc-linux-gnu/15.2.1/../../../../x86_64-pc-linux-gnu/lib/../lib/:/usr/lib/gcc/x86_64-pc-linux-gnu/15.2.1/../../../x86_64-pc-linux-gnu/15.2.1/:/usr/lib/gcc/x86_64-pc-linux-gnu/15.2.1/../../../../lib/:/lib/x86_64-pc-linux-gnu/15.2.1/:/lib/../lib/:/usr/lib/x86_64-pc-linux-gnu/15.2.1/:/usr/lib/../lib/:/usr/lib/gcc/x86_64-pc-linux-gnu/15.2.1/../../../../x86_64-pc-linux-gnu/lib/:/usr/lib/gcc/x86_64-pc-linux-gnu/15.2.1/../../../:/lib/:/usr/lib/
-----------
